fix(layout): center aligned text

--- a/packages/dapp/pages/styles/ubiquity.css
+++ b/packages/dapp/pages/styles/ubiquity.css
@@ -131,7 +131,6 @@ video {
 }
 #MainContent > div {
   display: inline-block;
-  text-align: right;
 }
 
 #Sidebar ul {
